--- a/.github/workflows/build-latex.yml
+++ b/.github/workflows/build-latex.yml
@@ -23,11 +23,11 @@ jobs:
         with:
           bump_version_scheme: minor
           tag_prefix: v
-      - name: Check Output Parameters
-        run: |
-          echo "Got tag name ${{ steps.release.outputs.tag_name }}"
-          echo "Got release version ${{ steps.release.outputs.version }}"
-          echo "Upload release artifacts to ${{ steps.release.outputs.upload_url }}"
+#      - name: Check Output Parameters
+#        run: |
+#          echo "Got tag name ${{ steps.release.outputs.tag_name }}"
+#          echo "Got release version ${{ steps.release.outputs.version }}"
+#          echo "Upload release artifacts to ${{ steps.release.outputs.upload_url }}"
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
